<resources>
    <string name="app_name">StockQuotes</string>
    <string name="enterStockSymbol">Enter stock symbol: "</string>
    <string name="symbol">Symbol: </string>
    <string name="name">Name: </string>
    <string name="lastTradePrice">Last Trade Price:  </string>
    <string name="lastTradeTime">Last Trade Time:  </string>
    <string name="change">Change: </string>
    <string name="range">52 Week Range: </string>

</resources>
