<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cornez.com.stockquotes.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textCapCharacters|textNoSuggestions"
        android:text=""
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/editText"
        android:layout_toEndOf="@+id/enterStockSymbol" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="77dp"
        android:layout_marginTop="26dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/symbolLabel" />

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/paddingLeft"
                android:id="@+id/symbolText" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nameLabel" />

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/paddingLeft"
                android:id="@+id/nameText" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/lastTradePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tradePriceLabel" />

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/paddingLeft"
                android:id="@+id/tradePriceText" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/lastTradeTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tradeTimeLabel" />

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/paddingLeft"
                android:id="@+id/tradeTimeText" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/changeLabel" />

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/paddingLeft"
                android:id="@+id/changeText" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rangeLabel" />

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/paddingLeft"
                android:id="@+id/rangeText" />
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enterStockSymbol"
        android:textSize="@dimen/enterStockSymbol"
        android:text="@string/enterStockSymbol"
        android:layout_alignBaseline="@+id/editText"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignParentStart="true" />
</RelativeLayout>
